syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

// For Unary
message GreetRequest {
  Greeting greeting = 1;
}
message GreetResponse {
  string result = 1;
}

// For Server Streaming
message GreetManyTimesRequest {
  Greeting greeting = 1;
}
message GreetManyTimesResponse {
  string result = 1;
}

// For Client Streaming
message LongGreetRequest {
  Greeting greeting = 1;
}
message LongGreetResponse {
  string result = 1;
}

// For BiDi Streaming
message GreetEveryoneRequest {
  Greeting greeting = 1;
}
message GreetEveryoneResponse {
  string result = 1;
}

service GreetService {
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  // Server Streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

  // Client Streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};

  // BiDi Streaming (Bidirectional)
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}

